cart scaffold added

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,5 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   name: MyString
   description: MyText
@@ -9,3 +7,11 @@ two:
   name: MyString
   description: MyText
   price: 9.99
+
+ruby:
+  name: Programming Ruby 1.9
+  description:
+    Ruby is the fastest growing and most exciting dynamic
+    language out there. If you need to get working programs
+    delivered fast, you should add Ruby to your toolbox.
+  price: 49.50
